src/test/resources/local/test5.sil
field next: Node
method test5(g:ClosedGraph, g2: Graph, xe:Node) returns (y:Node)
requires xe in g
{
    var n: Node
    n := new(*)
    n := new_node()
    var b: Bool
    while(b)
    {
        var n2: Node
        n2 := new_node()

    }
xe.next := null // error: scala.MatchError: OurClosedGraph
//:: ExpectedOutput(assert.failed:assertion.false)
assert false
}